# IAD3

./: Datavisualisatie.txt
BevolkingGewest/: BevolkingGewest.sln  BevolkingGewest.vcxproj  BevolkingGewest.vcxproj.filters  CMakeLists.txt  config.make
BevolkingGewest/src/: ofApp.cpp  ofApp.h
HuishoudensSquil/: HuishoudensSquil.sln  HuishoudensSquil.vcxproj  HuishoudensSquil.vcxproj.filters
HuishoudensSquil/src/: ofApp.cpp  ofApp.h
OpenWeatherData/: CMakeLists.txt  Makefile  OpenWeatherData.VC.VC.opendb  OpenWeatherData.sln  OpenWeatherData.vcxproj  OpenWeatherData.vcxproj.filters
OpenWeatherData/src/: ofApp.cpp  ofApp.h
